# veemon

./: .env.example  .gitignore  .release-please-manifest.json  Cargo.toml  LICENSE  README.md  REUSE.toml  flake.nix  release-please-config.json  rust-toolchain.toml
crates/arbitrum-ve/: Cargo.toml
crates/arbitrum-ve/src/: errors.rs  inclusion_proof.rs  lib.rs
crates/authentication/: Cargo.toml  README.md
crates/authentication/src/: error.rs  lib.rs  validator.rs
crates/authentication/src/ethereum/: common.rs  mod.rs  post_merge.rs  pre_merge.rs  proof.rs  types.rs
crates/authentication/src/solana/: mod.rs  validator.rs
crates/decoder/: CHANGELOG.md  Cargo.toml  README.md
crates/decoder/benches/: decoder.rs  stream_blocks.rs
crates/decoder/examples/: cli.rs  compression.rs  read_blocks.rs  read_from_encoder.rs  read_mainnet.rs
crates/decoder/src/: dbin.rs  decoder.rs  error.rs  lib.rs
crates/decoder/tests/: 000000000.parquet
crates/encoder/: Cargo.toml  README.md
crates/encoder/examples/: encode_beacon.rs  encode_mainnet.rs  encode_state.rs  eth_block_encoder.rs
crates/encoder/src/: encode_ext.rs  encode_utils.rs  encoder.rs  lib.rs
crates/encoder/tests/: encode_ext_tests.rs  encode_test.rs
crates/era-validation/: Cargo.toml  README.md
crates/era-validation/src/: error.rs  lib.rs  traits.rs  types.rs  validator.rs
crates/era-validation/src/ethereum/: common.rs  mod.rs  post_capella.rs  post_merge.rs  pre_merge.rs  proof.rs  types.rs
crates/era-validation/src/solana/: mod.rs  validator.rs
crates/era-validators/: Cargo.toml  README.md
crates/era-validators/src/: era_validator_generic.rs  lib.rs  traits.rs
crates/era-validators/src/impls/: common.rs  ethereum_post_capella.rs  ethereum_post_merge.rs  ethereum_pre_merge.rs  mod.rs  solana.rs
crates/firehose-client/: CHANGELOG.md  Cargo.toml  README.md
crates/firehose-client-rs/: Cargo.toml  README.md  build.rs
crates/firehose-client-rs/proto/: type.proto
crates/firehose-client-rs/src/: config.rs  error.rs  execution_layer_client.rs  lib.rs  request.rs
crates/firehose-client/examples/: fetch_beacon.rs  fetch_ethereum.rs  stream_beacon.rs  stream_ethereum.rs
crates/firehose-client/src/: client.rs  error.rs  lib.rs  request.rs  tls.rs
crates/firehose-protos/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/firehose-protos-examples/: CHANGELOG.md  Cargo.toml  README.md
crates/firehose-protos-examples/examples/: fetch_beacon.rs  fetch_ethereum.rs  receipt_root.rs  solana_response.rs  stream_beacon.rs  stream_ethereum.rs
crates/firehose-protos-examples/src/: lib.rs
crates/firehose-protos/examples/: receipt_root.rs
crates/firehose-protos/protos/: beacon.proto  block.proto  bstream.proto  firehose.proto  sol_block.proto
crates/firehose-protos/src/: beacon_v1.rs  error.rs  ethereum_v2.rs  lib.rs
crates/firehose-protos/src/ethereum_v2/: access.rs  eth_block.rs  log.rs  mod.rs  transaction.rs
crates/firehose-protos/src/firehose_v2/: mod.rs  request.rs
crates/firehose-protos/src/solana/: mod.rs  sol_block.rs
crates/flat-files-decoder/: CHANGELOG.md  Cargo.toml  README.md
crates/flat-files-decoder/benches/: decoder.rs  stream_blocks.rs
crates/flat-files-decoder/examples/: cli.rs  compression.rs  read_blocks.rs  stream.rs
crates/flat-files-decoder/src/: cli.rs  compression.rs  dbin.rs  decoder.rs  decompression.rs  error.rs  headers.rs  lib.rs  main.rs  reader.rs
crates/flat-files-decoder/src/dbin/: mod.rs
crates/flat-files-decoder/src/headers/: error.rs  mod.rs
crates/flat-files-decoder/src/receipts/: error.rs  logs.rs  mod.rs  receipt.rs
crates/flat-files-decoder/tests/: decode.rs  decode_test.rs  transactions.rs
crates/flat-head/: Cargo.toml
crates/flat-head/src/: era_verifier.rs  main.rs  s3.rs  store.rs  utils.rs
crates/forrestrie/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/forrestrie-examples/: Cargo.toml  README.md
crates/forrestrie-examples/examples/: block_roots_only_proof.rs  block_roots_proofs.rs  dump_state_to_json.rs  empty_slot_hashes.rs  fetch_and_verify_block.rs  historical_state_roots_proof.rs  historical_summary_proof.rs  match_ethereum_to_beacon.rs  post_capella_era_from_deserialize.rs  post_merge_pre_capella_proof.rs  receipts_proof.bak  receipts_proof.rs  single_block_post_merge_pre_capella_proof.rs  single_execution_block.rs  verify-era.rs  verify_block_inclusion_proof.rs
crates/forrestrie-examples/src/: lib.rs
crates/forrestrie/examples/: block_roots_proofs.rs  fetch_and_verify_block.rs  historical_state_roots_proof.rs  historical_summary_proof.rs  match_ethereum_to_beacon.rs  single_execution_block.rs  verify_block_inclusion_proof.rs
crates/forrestrie/protos/: README.md
crates/forrestrie/src/: beacon_block.rs  beacon_state.rs  beacon_v1.rs  execution_block.rs  execution_layer.rs  lib.rs  verify.rs
crates/header-acc-substream/: .gitignore  Cargo.toml  README.md  buf.gen.yaml  substreams.yaml
crates/header-acc-substream/proto/: mydata.proto
crates/header-acc-substream/src/: lib.rs
crates/header-accumulator/: CHANGELOG.md  Cargo.toml  README.md
crates/header-accumulator/examples/: era_validator.rs  inclusion_proof.rs
crates/header-accumulator/src/: accumulator.rs  epoch.rs  era_validator.rs  errors.rs  inclusion_proof.rs  lib.rs  sync.rs  types.rs
crates/header-accumulator/tests/: era_validator.rs  inclusion_proof.rs  utils.rs
crates/sf-protos/: Cargo.toml  Readme.md  build.rs
crates/sf-protos/protos/: block.proto
crates/sf-protos/src/: beacon_v1.rs  ethereum_v2.rs  lib.rs
crates/validation/: Cargo.toml
crates/validation/src/: constants.rs  header_validator.rs  historical_roots.rs  lib.rs  post_capella_types.rs
crates/vee/: CHANGELOG.md  Cargo.toml  README.md
crates/vee/examples/: verify_blocks_from_dbin.rs  verify_pre_merge.rs
crates/vee/src/: lib.rs  proof.rs
forrestrie-examples/: Cargo.toml  README.md
forrestrie-examples/examples/: fetch_and_verify_block.rs  historical_state_roots_proof.rs  receipts_proof.rs  single_execution_block.rs  verify_block_inclusion_proof.rs
(+27 files in other folders)
