[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
alloy-consensus = "0.4.2"
alloy-eip2930 = "0.1.0"
alloy-primitives = "0.8.20"
anyhow = "1.0.68"
arbitrum-ve = { path = "crates/arbitrum-ve" }
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
decoder = { path = "crates/decoder" }
era-validators = { path = "crates/era-validators" }
ethportal-api = { git = "https://github.com/ethereum/trin.git", rev = "81045ef" }
ethereum_hashing = "0.7.0"
ethereum_ssz = "0.7.1"
ethereum_ssz_derive = "0.7.1"
firehose-protos = { path = "crates/firehose-protos" }
firehose-rs = "0.1.0"
header-accumulator = { path = "crates/header-accumulator" }
hex = "0.4.3"
merkle_proof = { git = "https://github.com/sigp/lighthouse.git", tag = "v7.0.0-beta.0" }
primitive-types = "0.12.2"
prost = "0.13.4"
prost-build = "0.13.4"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
rand = "0.9.0"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
rlp = "0.5.2"
serde = "1.0.216"
serde_json = "1.0.133"
ssz_types = "0.8.0"
tempfile = "3.14.0"
thiserror = "2.0.8"
tokio = "1.42.0"
tonic = "0.13.0"
tonic-build = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree_hash = "0.8.0"
tree_hash_derive = "0.8.0"
trin-validation = { git = "https://github.com/ethereum/trin.git", rev = "81045ef" }
types = { git = "https://github.com/sigp/lighthouse.git", tag = "v7.0.0-beta.0" }
zstd = "0.13.2"


[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1
lto = false
