[workspace]
members = [
    "crates/arbitrum-ve",
    "crates/era-validation",
    "crates/decoder",
    "crates/encoder",
    "crates/era-validators",
    "crates/firehose-protos",
    "crates/firehose-protos-examples",
    "crates/header-accumulator",
    "crates/validation",
    "crates/vee",
]
resolver = "2"

[workspace.dependencies]
alloy-core = "1.4.1"
alloy-dyn-abi = "1.4.1"
alloy-rlp = "0.3.12"
alloy-consensus = "1.0.42"
alloy-eip2930 = "0.2.1"
alloy-primitives = "1.4.1"
anyhow = "1.0.100"
arbitrum-ve = { path = "crates/arbitrum-ve" }
era-validation = { path = "crates/era-validation" }
base64 = "0.22.1"
beacon-protos = { git = "https://github.com/semiotic-ai/beacon-protos.git", branch = "main" }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
decoder = { path = "crates/decoder" }
era-validators = { path = "crates/era-validators" }
ethportal-api = "0.12.0"
ethereum_hashing = "0.8.0"
ethereum_ssz = "0.9.1"
ethereum_ssz_derive = "0.9.1"
firehose-protos = { path = "crates/firehose-protos" }
firehose-rs = "0.3.0"
futures = "0.3.31"
header-accumulator = { path = "crates/header-accumulator" }
hex = "0.4.3"
keccak-hash = "0.11.0"
kzg = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
merkle_proof = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
parquet = "56.2.0"
primitive-types = "0.14.0"
prost = "0.14.1"
prost-build = "0.14.1"
prost-wkt = "0.7.0"
prost-wkt-types = "0.7.0"
rand = "0.9.2"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
rlp = "0.6.1"
serde = "1.0.228"
serde_json = "1.0.145"
ssz_types = "0.12.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tree_hash = "0.10.0"
tree_hash_derive = "0.10.0"
validation = { path = "crates/validation" }
vee = { path = "crates/vee" }
types = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
zstd = "0.13.3"

[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1
lto = false
