# Copyright 2025 Semiotic AI, Inc.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "crates/arbitrum-ve",
    "crates/era-validation",
    "crates/decoder",
    "crates/encoder",
    "crates/era-validators",
    "crates/firehose-protos",
    "crates/firehose-protos-examples",
    "crates/header-accumulator",
    "crates/validation",
    "crates/vee",
]
resolver = "2"

[workspace.dependencies]
alloy-rlp = "0.3.12"
alloy-consensus = "^1.2" # use old version to match amp
alloy-eip2930 = "0.2.3"
alloy-primitives = "^1.4" # use old version to match amp
anyhow = "1.0.100"
arbitrum-ve = { path = "crates/arbitrum-ve" }
era-validation = { path = "crates/era-validation" }
beacon-protos = { git = "https://github.com/semiotic-ai/beacon-protos.git", branch = "main" }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
decoder = { path = "crates/decoder" }
ethportal-api = "0.12.0"
ethereum_hashing = "0.8.0"
ethereum_ssz = "0.9.1"
ethereum_ssz_derive = "0.9.1"
firehose-protos = { path = "crates/firehose-protos" }
firehose-rs = "0.3.0"
futures = "0.3.31"
header-accumulator = { path = "crates/header-accumulator" }
hex = "0.4.3"
merkle_proof = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
parquet = "56.2.0"
primitive-types = "0.14.0"
prost = "0.14.1"
prost-build = "0.14.1"
prost-wkt-types = "0.7.0"
rand = "0.9.2"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
serde = "1.0.228"
serde_json = "1.0.149"
ssz_types = "0.12.2"
thiserror = "2.0.17"
tokio = "1.49.0"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tree_hash = "0.10.0"
tree_hash_derive = "0.10.0"
validation = { path = "crates/validation" }
vee = { path = "crates/vee" }
types = { git = "https://github.com/sigp/lighthouse.git", branch = "stable" }
zstd = "0.13.3"

[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1
lto = false
