# Copyright 2025 Semiotic AI, Inc.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "arbitrum-ve"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
alloy-primitives.workspace = true
thiserror.workspace = true
alloy-consensus.workspace = true
