[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

[lib]
name = "flat_files_decoder"
path = "src/lib.rs"

[dependencies]
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eip2930.workspace = true
bincode.workspace = true
firehose-protos.workspace = true
prost.workspace = true
reth-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
rand.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "stream_blocks"
harness = false
