# Copyright 2025 Semiotic AI, Inc.
# SPDX-License-Identifier: Apache-2.0


[package]
name = "encoder"
version = "0.1.0"
edition = "2021"

[lib]
name = "flat_files_encoder"
path = "src/lib.rs"

[dependencies]
alloy-consensus.workspace = true
alloy-eip2930.workspace = true
alloy-primitives.workspace = true
bincode.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
firehose-protos.workspace = true
prost.workspace = true
prost-wkt-types.workspace = true
reth-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tracing.workspace = true
types.workspace = true
zstd.workspace = true

[dev-dependencies]
beacon-protos = { git = "https://github.com/semiotic-ai/beacon-protos.git", commit = "fba3539"}
firehose-client = { git = "https://github.com/semiotic-ai/firehose-client.git", commit = "c511e4c"}
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = "1.39.2"
tree_hash.workspace = true

