# Copyright 2025 Semiotic AI, Inc.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "era-validation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "multi-chain block era validation for ethereum and solana"
authors = ["Semiotic AI <info@semiotic.ai>"]

[dependencies]
# foundation
validation.workspace = true

# ethereum types
alloy-consensus.workspace = true
alloy-primitives.workspace = true
ethportal-api.workspace = true
firehose-protos.workspace = true
tree_hash.workspace = true

# lighthouse types (for beacon chain)
types.workspace = true
merkle_proof.workspace = true
primitive-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
