[package]
name = "era-validators"
version = "0.1.0"
edition = "2021"

[dependencies]
types.workspace = true
merkle_proof.workspace = true
trin-validation.workspace = true
tree_hash.workspace = true
primitive-types = "0.12.2"
thiserror.workspace = true
header-accumulator.workspace = true
ethportal-api.workspace = true
