[package]
name = "era-validators"
version = "0.1.4"
edition = "2021"

[dependencies]
types.workspace = true
merkle_proof.workspace = true
trin-validation.workspace = true
tree_hash.workspace = true
primitive-types.workspace = true
thiserror.workspace = true
header-accumulator.workspace = true
ethportal-api.workspace = true
alloy-primitives.workspace = true
