[package]
name = "era-validators"
version = "0.1.5"
edition = "2021"

[dependencies]
types.workspace = true
merkle_proof.workspace = true
validation.workspace = true
tree_hash.workspace = true
thiserror.workspace = true
ethportal-api.workspace = true
alloy-primitives.workspace = true
primitive-types.workspace = true
