[package]
name = "firehose-client-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "firehose_client"
path = "src/lib.rs"

[[bin]]
name = "firehose-client-rs"
path = "src/main.rs"

[dependencies]
dotenvy.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-wkt-types.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
tonic.workspace = true

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
