[package]
name = "firehose-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "firehose_client"
path = "src/lib.rs"

[dependencies]
sf-protos = { path = "../sf-protos" }

dotenvy.workspace = true
futures.workspace = true
http.workspace = true
once_cell.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["tls-roots"] }
tracing.workspace = true

[dev-dependencies]
hex.workspace = true
insta.workspace = true
