[package]
name = "firehose-protos"
version = "0.2.0"
edition = "2021"

[lib]
doctest = false
path = "src/lib.rs"
name = "firehose_protos"

[dependencies]
alloy-consensus.workspace = true
alloy-eip2930.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
# TODO: use alloy-trie when it is certain
# that it wont break other functionalities
#alloy-trie.workspace = true
ethportal-api.workspace = true
firehose-rs.workspace = true
prost.workspace = true
prost-wkt.workspace = true
prost-wkt-types.workspace = true
reth-primitives.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
