[package]
name = "firehose-protos"
version = "0.6.1"
edition = "2021"

[lib]
doctest = false
path = "src/lib.rs"
name = "firehose_protos"

[dependencies]
alloy-consensus.workspace = true
alloy-eip2930.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
firehose-rs.workspace = true
hex.workspace = true
prost.workspace = true
prost-wkt.workspace = true
prost-wkt-types.workspace = true
reth-primitives.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-prost-build.workspace = true
