[package]
name = "decoder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-eip2930.workspace = true
bincode.workspace = true
clap.workspace = true
prost.workspace = true
rand.workspace = true
rayon.workspace = true
reth-primitives.workspace = true
reth-trie-common.workspace = true
revm-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sf-protos = { path = "../sf-protos" }
simple-log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio-test.workspace = true

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "stream_blocks"
harness = false

[build-dependencies]
prost-build.workspace = true
prost-wkt-build.workspace = true
