[package]
name = "flat-files-decoder"
version = "0.1.1"
edition = "2021"

[lib]
name = "flat_files_decoder"
path = "src/lib.rs"

[[bin]]
name = "flat-files-decoder"
path = "src/main.rs"

[dependencies]
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eip2930.workspace = true
bincode.workspace = true
clap.workspace = true
firehose-protos = { path = "../firehose-protos" }
futures.workspace = true
prost.workspace = true
rand.workspace = true
rayon.workspace = true
reth-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
insta = { workspace = true, features = ["json"] }
tokio-test.workspace = true

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "stream_blocks"
harness = false

[build-dependencies]
prost-build.workspace = true
prost-wkt-build.workspace = true
