[package]
name = "flat-head"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sf-protos = { path = "../sf-protos" }
anyhow = "1"
bincode = "1.3.3"
bytes = "1.5"
clap = { version = "4.3.21", features = ["derive"] }
decoder = { path = "../flat-files-decoder" }
dotenv = "0.15.0"
env_logger = "0.11.2"
futures = "0.3"
header_accumulator = { path = "../header-accumulator" }
log = "0.4.20"
object_store = { version = "0.9.0", features = ["gcp", "http", "aws"] }
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tree_hash = { git = "https://github.com/KolbyML/tree_hash.git", rev = "8aaf8bb4184148768d48e2cfbbdd0b95d1da8730" }
trin-validation = { git = "https://github.com/ethereum/trin.git", version = "0.1.0", tag = "v0.1.0-alpha.35" }
url = "2.5"
zstd = "0.13.0"
