[package]
name = "flat-head"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytes.workspace = true
clap.workspace = true
decoder = { path = "../flat-files-decoder" }
dotenv.workspace = true
env_logger.workspace = true
futures.workspace = true
header_accumulator = { path = "../header-accumulator" }
log.workspace = true
object_store.workspace = true
sf-protos = { path = "../sf-protos" }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tree_hash.workspace = true
trin-validation.workspace = true
url.workspace = true
zstd.workspace = true
