[package]
name = "flat-head"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytes.workspace = true
clap.workspace = true
flat-files-decoder = { path = "../flat-files-decoder" }
dotenvy.workspace = true
tree_hash.workspace = true
env_logger.workspace = true
firehose-protos = { path = "../firehose-protos" }
futures.workspace = true
header-accumulator = { path = "../header-accumulator" }
log.workspace = true
object_store.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
trin-validation.workspace = true
url.workspace = true
zstd.workspace = true
