[package]
name = "forrestrie-examples"
version = "0.1.1"
edition = "2021"

[dev-dependencies]
beacon-protos.workspace = true
bls.workspace = true
ethportal-api.workspace = true
firehose-client.workspace = true
firehose-protos = { path = "../firehose-protos" }
forrestrie = { path = "../forrestrie" }
futures.workspace = true
insta.workspace = true
merkle_proof.workspace = true
primitive-types.workspace = true
prost.workspace = true
prost-wkt.workspace = true
prost-wkt-types.workspace = true
reqwest = { workspace = true, features = ["json"] }
reth-primitives.workspace = true
reth-trie-common.workspace = true
serde = { workspace = true, features = ["derive"] }
snap = "1.1.1"
ssz_types = "0.8.0"
ethereum_ssz = "0.7.1"
ethereum_ssz_derive = "0.7.1"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trin-validation = { git = "https://github.com/ethereum/trin.git", version = "0.1.0", tag = "v0.1.0-alpha.51" }
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
tree_hash = "0.6.0"
types.workspace = true
