[package]
name = "forrestrie"
version = "0.1.1"
edition = "2021"

[lib]
name = "forrestrie"
path = "src/lib.rs"

[dependencies]
alloy-rlp.workspace = true
alloy-primitives.workspace = true
bls.workspace = true
ethportal-api.workspace = true
firehose-protos = { path = "../firehose-protos" }
futures.workspace = true
merkle_proof.workspace = true
primitive-types.workspace = true
prost.workspace = true
prost-wkt.workspace = true
prost-wkt-types.workspace = true
reth-trie-common.workspace = true
reth-primitives.workspace = true
serde = { workspace = true, features = ["derive"] }
ssz_types.workspace = true
tonic.workspace = true
tree_hash = "0.6.0"
types.workspace = true

[dev-dependencies]
fake.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
