[package]
name = "header-accumulator"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
base64.workspace = true
ethportal-api.workspace = true
firehose-protos.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ethereum_ssz.workspace = true
ssz_types.workspace = true
ethereum_ssz_derive.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
validation.workspace = true

[dev-dependencies]
decoder.workspace = true
tempfile.workspace = true
