[package]
name = "header-accumulator"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentication = { version = "0.1.0", path = "../authentication" }

[dev-dependencies]
decoder.workspace = true
tempfile.workspace = true
