# Copyright 2025 Semiotic AI, Inc.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "header-accumulator"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
era-validation = { version = "0.1.0", path = "../era-validation" }

[dev-dependencies]
decoder.workspace = true
tempfile.workspace = true
