[package]
name = "sf-protos"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
alloy-primitives.workspace = true
bls.workspace = true
ethportal-api.workspace = true
primitive-types.workspace = true
prost.workspace = true
prost-wkt.workspace = true
prost-wkt-types.workspace = true
reth-primitives.workspace = true
serde.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tonic.workspace = true
types.workspace = true

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
