[package]
name = "validation"
description = "Validation layer for the Portal Network data."
edition = "2021"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
alloy-rlp.workspace = true
tree_hash.workspace = true
ethportal-api.workspace = true
alloy-primitives.workspace = true
ssz_types.workspace = true

[lib]
name = "validation"
path = "src/lib.rs"
