# Copyright 2025 Semiotic AI, Inc.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "validation"
version = "0.1.0"
description = "Validation layer for the Portal Network data."
edition = "2021"
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
anyhow.workspace = true
alloy-consensus.workspace = true
tree_hash.workspace = true
ethportal-api.workspace = true
alloy-primitives.workspace = true
ssz_types.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_hashing.workspace = true
lazy_static = "1.5.0"
serde.workspace = true
rust-embed = "8.9.0"
tree_hash_derive.workspace = true
static_assertions = "1.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[lib]
name = "validation"
path = "src/lib.rs"
