[package]
name = "vee"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "vee"

[dependencies]
alloy-primitives.workspace = true
ethportal-api.workspace = true
firehose-protos.workspace = true
decoder.workspace = true
header-accumulator.workspace = true
reth-primitives.workspace = true


[dev-dependencies]
tree_hash.workspace = true
