# Copyright 2025 Semiotic AI, Inc.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vee"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "vee"

[features]
default = []
firehose = ["dep:firehose-protos", "dep:decoder"]

[dependencies]
firehose-protos = { workspace = true, optional = true }
decoder = { workspace = true, optional = true }
era-validation.workspace = true
header-accumulator.workspace = true
arbitrum-ve.workspace = true

[dev-dependencies]
tree_hash.workspace = true
